Revert "Merge branch 'Integration' into Front-end"
This reverts commit 85627adf546b286cb08c7859669eb9da4ba12800,   reversing
changes made to b5090770e4718714c2525b7b5e7b3dfa05202a9d.
